--- a/templates/joueur/resultat_final.html
+++ b/templates/joueur/resultat_final.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% if points > 0 %}
+{% if a_gagne%}
     <p>félicitations vous avez gagné</p>
 {% else %}
     <p>malheuresement vous avez perdu</p>
