--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -4,27 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <title>Jeu d'entreprise</title>
 </head>
 <body>
-    <h1>Jeu entreprise</h1>
-    <div class="container" >
-        <div>
-            <a href="{% url 'joueurs' %}">gestion des joueurs</a> <br>
-            <a href="{% url 'gestion-missions' %}">gestion des missions</a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <div class="side-bar">
+        <div class="title">
+            <h1>Jeu d'entreprise</h1>
         </div>
-        <div>
+        <ul>
+            <li>
+                <a class="nav-link active"  href="{% url 'joueurs' %}">
+                    <i class="bi bi-people-fill"></i>
+                    <span>Joueurs</span>
+                </a>
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'gestion-missions' %}">
+                    <i class="bi bi-gear"></i> 
+                    <span>Missions</span> 
+                </a>
+            </li>
+            <li>
+                <a class="nav-link" href="{% url 'logout' %}">
+                    <i class="bi bi-box-arrow-left"></i>
+                    <span>logout</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+        
+        
+        <div class="home-section" >
             {% block content %}
 
             {% endblock %}
         </div>
-    </div>
 </body>
 
 <style>
-    .container{
-        display: grid;
-        grid-template-columns: 1fr 3fr; 
+    *{
+        font-family: sans-serif;
     }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+    .side-bar{
+        height: 100%;
+        width: 240px;
+        background-color: blue;
+        position: fixed;
+    }
+    .side-bar .title h1{
+        font-size: 28px;
+        color: white;
+        text-align: center;
+        margin: 30px 20px;
+    }
+    .side-bar ul{
+        margin-top: 60px;
+        list-style: none;
+        padding-left: 0;
+    }
+    .side-bar li{
+        font-size: 18px;
+    }
+    .side-bar i{
+        margin: 10px;
+        text-align: center;
+    }
+    .side-bar a{
+        text-decoration: none;
+        color: white;
+        padding: 20px;
+    }
+    .side-bar li a:hover{
+        background-color: aqua;
+    }
+    .home-section{
+        position: relative;
+        left: 240px;
+        width: calc(100% - 240px);
+        background-color: #f5f5f5;
+        height: 100vh;
+        padding: 30px;
+    }
+    
 </style>
 </html>
