--- a/templates/admin/gestion_joueurs/creerJoueur.html
+++ b/templates/admin/gestion_joueurs/creerJoueur.html
@@ -32,6 +32,11 @@
         {{form.points}}
     </div>
 
+    <div class="form__group">
+        <label for="room_description">type de missions :</label>
+        {{form.type_de_missions}}
+    </div>
+
     <button class="btn btn--main" type="submit">
         Enregistrer
     </button>
