--- a/templates/admin/gestion_missions/gestion_missions.html
+++ b/templates/admin/gestion_missions/gestion_missions.html
@@ -2,13 +2,13 @@
 {% extends "dashboard.html" %}
 
 {% block content %}
-<button type="button" class="btn btn-primary"><a href="{% url 'afficher-missions' %}">afficher les missions</a></button> <br>
+<a href="{% url 'afficher-missions' %}"><button type="button" class="btn btn-primary">afficher les missions</button></a> <br>
 {% for type in types %}
-    <button type="button" class="btn btn-primary"><a href="creer-{{type}}">créer une mission de type {{type}}</a></button>
+    <a href="missions/creer-{{type}}"><button type="button" class="btn btn-primary">créer une mission de type {{type}}</button></a>
     <br>
 {% endfor %}
-<button type="button" class="btn btn-primary"><a href="{% url 'parametrage-gc' %}">Paramétrage Mission gestion commerciale</a></button>
+<a href="{% url 'parametrage-gc' %}"><button type="button" class="btn btn-primary">Paramétrage Mission gestion commerciale</button></a>
 <br>
-<button type="button" class="btn btn-secondary"><a href="/">revenir</a></button>
+<a href="/"><button type="button" class="btn btn-secondary">revenir</button></a>
 
 {% endblock content %}
