--- a/templates/admin/supprimer.html
+++ b/templates/admin/supprimer.html
@@ -1,6 +1,11 @@
+{% extends "dashboard.html" %}
+
+{% block content %}
 <form action="" method="post">
     {% csrf_token %}
-    Voulez‑vous vraiment supprimer {{joueur}}
-    <a href="{{ request.META.HTTP_REFERER }}">revenir</a>
+    Voulez‑vous vraiment supprimer <b>{{joueur}}</b> <br>
     <input type="submit" value="oui">
 </form>
+<a href="{{request.META.HTTP_REFERER }}"><button>revenir</button></a>
+
+{% endblock content %}
