--- a/templates/admin/gestion_joueurs/creerJoueur.html
+++ b/templates/admin/gestion_joueurs/creerJoueur.html
@@ -1,46 +1,51 @@
 {% extends "dashboard.html" %}
 
 {% block content %}
-<h3>
-    {% if creer %}
-        Creer un joueur
-    {% else %}
-        Modifier le joueur
-    {% endif %}
+<div class="home-section-title">
+    <h3>
+        {% if creer %}
+            Creer un joueur
+        {% else %}
+            Modifier le joueur
+        {% endif %}
 
-</h3>
+    </h3>
+</div>
 
+<div class="create-object">
+    <form action="" method="post">
+        {% csrf_token %}
+        <div class="object-info">
+            <label class="label-info" for="nom">Nom d'utilisateur : </label>
+            {{form.username}}
+        </div>
 
-<form action="" method="post">
-    {% csrf_token %}
-    <div class="form__group">
-        <label for="room_name">Nom d'utilisateur</label>
-        {{form.username}}
-    </div>
+        <div class="object-info">
+            <label class="label-info" for="mdp">Mot de passe : </label>
+            {{form.password1}}
+        </div>
+        <div class="object-info">
+            <label class="label-info" for="mdp2">Répéter le mot de passe : </label>
+            {{form.password2}}
+        </div>
 
-    <div class="form__group">
-        <label for="room_description">mot de passe</label>
-        {{form.password1}}
-    </div>
-    <div class="form__group">
-        <label for="room_name">répéter le mot de passe</label>
-        {{form.password2}}
-    </div>
+        <div class="object-info">
+            <label class="label-info" for="nombre_points">Points : </label>
+            {{form.points}}
+        </div>
 
-    <div class="form__group">
-        <label for="room_description">Points de points de départs</label>
-        {{form.points}}
-    </div>
+        <div class="object-info">
+            <label class="label-info" for="type_mission">Type de mission : </label>
+            {{form.type_de_missions}}
+        </div>
 
-    <div class="form__group">
-        <label for="room_description">type de missions :</label>
-        {{form.type_de_missions}}
-    </div>
-
-    <button class="btn btn--main" type="submit">
-        Enregistrer
-    </button>
-</form>
-<a href="{% url 'joueurs' %}">revenir</a>
+        <button type="submit" class="btn btn-success">
+            Enregistrer
+        </button>
+    </form>
+</div>
+<a href="{% url 'joueurs' %}">
+    <button type="button" class="btn btn-dark">revenir</button>
+</a>
 
 {% endblock content %}
