--- a/templates/admin/gestion_joueurs/creerJoueur.html
+++ b/templates/admin/gestion_joueurs/creerJoueur.html
@@ -39,6 +39,10 @@
             {{form.type_de_missions}}
         </div>
 
+        <div class="object-info">
+            <label class="label-info" for="type_mission">Nombre de missions : </label>
+            {{form.nombre_de_missions}}
+        </div>
         <button type="submit" class="btn btn-success">
             Enregistrer
         </button>
