--- a/templates/admin/gestion_missions/vie_d'entreprise/vie_entrepriseM.html
+++ b/templates/admin/gestion_missions/vie_d'entreprise/vie_entrepriseM.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="home-section-title">
-    <h3>Créer une sanction</h3>
+    <h3>Créer une mission vie d'entreprise</h3>
 </div>
 
 <div class="create-object">
