--- a/templates/joueur/missions/quizzj.html
+++ b/templates/joueur/missions/quizzj.html
@@ -6,8 +6,14 @@
 
 
 <div style="float: right;">
-    <p>temps restant:</p>
-    <div id="temps"></div>
+    <div>
+        <p>temps restant:</p>
+        <div id="temps"></div>
+    </div>
+    <div>
+        <p>nombre de points de la mission:</p>
+        <div id="nb-points">{{nbre_points}}</div>
+    </div>
 </div>
 <form action="" method="post">
     {% csrf_token %}
