Add .gitignore file

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,6 +104,10 @@ a{
     margin: 10px;
 }
 
+.object-info input[type=text]{
+    width:440px;
+}
+
 .label-info {
     width: 250px;
 }
@@ -137,3 +141,4 @@ a{
 #supprimer span{
     font-size: 20px;
 }
+
