--- a/templates/joueur/missions/quizzj.html
+++ b/templates/joueur/missions/quizzj.html
@@ -1,35 +1,38 @@
-{% extends "home.html" %}
+{% extends "missions.html" %}
 
 
 
 {% block content %}
 
 
-<div style="float: right;">
-    <div>
-        <p>temps restant:</p>
-        <div id="temps"></div>
-    </div>
-    <div>
-        <p>nombre de points de la mission:</p>
-        <div id="nb-points">{{nbre_points}}</div>
-    </div>
-</div>
-<form action="" method="post">
-    {% csrf_token %}
-    <p>{{mission.question}}</p>
-    <input type="radio" id="op1" name="reponse" value="{{mission.op1}}">
-    <label for="op1">{{mission.op1}}</label><br>
-    <input type="radio" id="op2" name="reponse" value="{{mission.op2}}">
-    <label for="op2">{{mission.op2}}</label><br>
-    <input type="radio" id="op3" name="reponse" value="{{mission.op3}}">
-    <label for="op3">{{mission.op3}}</label><br>
-    <input type="radio" id="op4" name="reponse" value="{{mission.op4}}">
-    <label for="op4">{{mission.op4}}</label><br>
-  
-    <br>  
-    <button type="submit">valider</button>
-</form>
 
+    <div class="question">
+        {{mission.question}}
+    </div>
+    <form action="" method="post" class="answers">
+        {% csrf_token %}
+        <div>
+            <input type="radio" id="op1" name="reponse" value="{{mission.op1}}">
+            <label for="op1">{{mission.op1}}</label><br>
+        </div>
+
+        <div>
+            <input type="radio" id="op2" name="reponse" value="{{mission.op2}}">
+            <label for="op2">{{mission.op2}}</label><br>
+        </div>
+
+        <div>
+            <input type="radio" id="op3" name="reponse" value="{{mission.op3}}">
+            <label for="op3">{{mission.op3}}</label><br>
+        </div>    
+
+        <div>
+            <input type="radio" id="op4" name="reponse" value="{{mission.op4}}">
+            <label for="op4">{{mission.op4}}</label><br>
+        </div>
+
+        <br>  
+        <button type="submit" class="submit-btn">Valider</button>
+    </form>
 
 {% endblock %}
