--- a/templates/joueur/missions/resultat.html
+++ b/templates/joueur/missions/resultat.html
@@ -3,32 +3,25 @@
 
 
 {% block content %}
+{% load static %}
+<img src="{% static 'jeu_gere.jpeg' %}">
+<main>
 
+    {% if gagne %}
+        <p  class="game-description">
+            Bravo vous avez réussit 
+            Vous avez gagné : 
+            {{points}} points
+        </p>
+    {% else %}
+        <p class="game-description">
+            Malheuresement vous avez échoué
+            Vous avez perdu : 
+            {{points}} points
+        </p>
+    {% endif %}
 
+    <a href="{% url 'generer' %}"><button  class="start-button">Mission suivante</button></a>
 
-{% if gagne %}
-<p>Bravo vous avez réussit 
-
-
-Vous avez gagné : 
-
-
-
-
-{{points}} points
-</p>
-{% else %}
-<p>malheuresement vous avez échoué
-
-
-    Vous avez perdu : 
-    
-    
-    
-    
-    {{points}} points
-    </p>
-{% endif %}
-
-<button><a href="{% url 'generer' %}">mission suivante</a></button>
+</main>
 {% endblock %}
